# wasi_plugin_system

./: Cargo.toml  README.md
core/host/: Cargo.toml
core/host/src/: main.rs
core/plugin-api/: Cargo.toml
core/plugin-api/src/: lib.rs
plugins/example-plugin/: Cargo.toml
plugins/example-plugin/src/: lib.rs
